--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = teensy
 board = teensy40
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-monitor_speed = 115200
+monitor_baud = 115200
 lib_deps = FlexCAN_T4, Arduino
 
 [platformio]
