--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy40]
-platform = teensy
-board = teensy40
+[env:ESP8266]
+platform = espressif8266
+board = d1_mini
+board_build.f_cpu = 80000000L
 framework = arduino
-lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
-lib_deps = FlexCAN_T4, Arduino
+;upload_protocol = espota
+;upload_port = my-fiorino.local
+;upload_flags =
+;    --spiffs
+;    --auth=MaPe1!
+lib_deps = Arduino, ESP8266Wifi, WiFiClient, ESP8266WebServer, ESP8266mDNS, WifiUdp, ArduinoOTA
+lib_extra_dirs = ~/Documents/Arduino/libraries
 
 [platformio]
-description = Reads data from BMS through RS-232 and controls charger profile accordingly
+description = Reads data from BMS through RS-232 and controls charger profile accordingly. Should also send info over wifi.
