--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,17 @@
 platform = espressif8266
 board = d1_mini
 board_build.f_cpu = 80000000L
+board_build.filesystem = littlefs
 framework = arduino
 monitor_speed = 115200
-;upload_protocol = espota
-;upload_port = my-fiorino.local
-;upload_flags =
-;    --spiffs
-;    --auth=MaPe1!
-lib_deps = Arduino, ESP8266Wifi, WiFiClient, ESP8266WebServer, ESP8266mDNS, WifiUdp, ArduinoOTA
+upload_protocol = espota
+;upload_port = myfiorino.local
+;upload_port = 192.168.1.173
+upload_port = 192.168.1.143
+upload_flags =
+    --spiffs
+    --auth=MaPe1!
+lib_deps = ArduinoOTA, ESP8266WiFi, ESP8266WebServer, ESP8266mDNS, WebSocketsServer, WiFiClient, ESPAsyncWebServer
 lib_extra_dirs = ~/Documents/Arduino/libraries
 
 [platformio]
