--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,11 @@ board_build.f_cpu = 80000000L
 board_build.filesystem = littlefs
 framework = arduino
 monitor_speed = 115200
-;upload_protocol = espota
-;upload_port = 192.168.1.143
+upload_protocol = espota
+upload_port = 192.168.4.22
 upload_flags =
-    ;--spiffs
-    ;--auth=MaPe1!
+    --spiffs
+    --auth=MaPe1!
 lib_deps = ArduinoOTA, ESP8266WiFi, ESP8266WebServer, ESP8266mDNS, WebSockets
 lib_extra_dirs = ~/Documents/Arduino/libraries
 
