--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,15 @@ upload_flags =
     --auth=MaPe1!
 lib_deps = ArduinoOTA, ESP8266WiFi, ESP8266WebServer, ESP8266mDNS, WebSockets
 lib_extra_dirs = ~/Documents/Arduino/libraries
+build_flags = -D TARGET_ESP8266
+
+[env:teensy40]
+platform = teensy
+board = teensy40
+framework = arduino
+monitor_speed = 115200
+lib_extra_dirs = ~/Documents/Arduino/libraries
+build_flags = -D TARGET_TEENSY40
 
 [platformio]
 description = Reads data from BMS through RS-232 and controls charger profile accordingly. Should also send info over wifi.
