--- a/platformio.ini
+++ b/platformio.ini
@@ -12,17 +12,27 @@
 platform = espressif8266
 board = d1_mini
 board_build.f_cpu = 80000000L
-board_build.filesystem = littlefs
+;board_build.filesystem = littlefs
 framework = arduino
 monitor_speed = 115200
-upload_protocol = espota
-upload_port = 192.168.4.22
-upload_flags =
-    --spiffs
-    --auth=MaPe1!
+;upload_protocol = espota
+;upload_port = 192.168.4.22
+;upload_flags =
+    ;--spiffs
+    ;--auth=MaPe1!
 lib_deps = ArduinoOTA, ESP8266WiFi, ESP8266WebServer, ESP8266mDNS, WebSockets
 lib_extra_dirs = ~/Documents/Arduino/libraries
 build_flags = -D TARGET_ESP8266
+
+[env:wemos_d1_mini32]
+platform = espressif32
+framework = arduino
+board = wemos_d1_mini32
+board_build.mcu = esp32
+board_build.f_cpu = 160000000L
+upload_protocol = esptool
+build_flags = -D TARGET_ESP32
+monitor_speed = 115200
 
 [env:teensy40]
 platform = teensy
