--- a/platformio.ini
+++ b/platformio.ini
@@ -8,22 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ESP8266]
-platform = espressif8266
-board = d1_mini
-board_build.f_cpu = 80000000L
-;board_build.filesystem = littlefs
-framework = arduino
-monitor_speed = 115200
-;upload_protocol = espota
-;upload_port = 192.168.4.22
-;upload_flags =
-    ;--spiffs
-    ;--auth=MaPe1!
-lib_deps = ArduinoOTA, ESP8266WiFi, ESP8266WebServer, ESP8266mDNS, WebSockets
-lib_extra_dirs = ~/Documents/Arduino/libraries
-build_flags = -D TARGET_ESP8266
-
 [env:wemos_d1_mini32]
 platform = espressif32
 framework = arduino
@@ -31,8 +15,19 @@ board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 160000000L
 upload_protocol = esptool
+;upload_port = 
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
+lib_deps = 
+    ArduinoOTA
+    WiFi 
+    WebServer 
+    ESPmDNS 
+    WebSockets
+    ESP32 AnalogWrite
+lib_extra_dirs =
+    C:\Users\WimBo\.platformio\packages\framework-arduinoespressif32\libraries
+    D:\Onedrive\Arduino\Projects\libraries
 
 [env:teensy40]
 platform = teensy
