--- a/platformio.ini
+++ b/platformio.ini
@@ -25,16 +25,13 @@ lib_deps =
     ESPmDNS 
     WebSockets
     ESP32 AnalogWrite
-lib_extra_dirs =
-    C:\Users\WimBo\.platformio\packages\framework-arduinoespressif32\libraries
-    D:\Onedrive\Arduino\Projects\libraries
+    elapsedMillis
 
 [env:teensy40]
 platform = teensy
 board = teensy40
 framework = arduino
 monitor_speed = 115200
-lib_extra_dirs = ~/Documents/Arduino/libraries
 build_flags = -D TARGET_TEENSY40
 
 [platformio]
