--- a/platformio.ini
+++ b/platformio.ini
@@ -15,17 +15,17 @@ board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 160000000L
 upload_protocol = esptool
-;upload_port = 
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 lib_deps = 
-    ArduinoOTA
-    WiFi 
-    WebServer 
-    ESPmDNS 
-    WebSockets
-    ESP32 AnalogWrite
-    elapsedMillis
+	ArduinoOTA
+	WiFi
+	ESPmDNS
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	ottowinter/AsyncTCP-esphome@^1.1.1
+	bblanchon/ArduinoJson@^6.16.1
+	erropix/ESP32 AnalogWrite@^0.2
+	pfeerick/elapsedMillis@^1.0.6
 
 [env:teensy40]
 platform = teensy
