--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 160000000L
 upload_protocol = esptool
+;upload_port = http://fiorino.local/
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 lib_deps = 
