--- a/platformio.ini
+++ b/platformio.ini
@@ -14,27 +14,30 @@ framework = arduino
 board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 160000000L
-upload_protocol = esptool
-;upload_port = 
+board_build.f_flash = 80000000L
+upload_speed = 2000000 
+;upload_protocol = espota
+;upload_port = fiorino.local
+upload_flags = 
+	;--auth=MaPe1!
+	;--spiffs
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 lib_deps = 
-    ArduinoOTA
-    WiFi 
-    WebServer 
-    ESPmDNS 
-    WebSockets
-    ESP32 AnalogWrite
-lib_extra_dirs =
-    C:\Users\WimBo\.platformio\packages\framework-arduinoespressif32\libraries
-    D:\Onedrive\Arduino\Projects\libraries
+	ArduinoOTA
+	WiFi
+	ESPmDNS
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	ottowinter/AsyncTCP-esphome@^1.1.1
+	bblanchon/ArduinoJson@^6.16.1
+	erropix/ESP32 AnalogWrite@^0.2
+	pfeerick/elapsedMillis@^1.0.6
 
 [env:teensy40]
 platform = teensy
 board = teensy40
 framework = arduino
 monitor_speed = 115200
-lib_extra_dirs = ~/Documents/Arduino/libraries
 build_flags = -D TARGET_TEENSY40
 
 [platformio]
