--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,10 @@ board = wemos_d1_mini32
 board_build.mcu = esp32
 board_build.f_cpu = 160000000L
 board_build.f_flash = 80000000L
-upload_speed = 2000000 
+upload_speed = 2000000
+upload_flags = 
+build_flags = -D TARGET_ESP32
+monitor_speed = 115200
 ;upload_protocol = espota
 ;upload_port = fiorino.local
 upload_flags = 
@@ -30,15 +33,7 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
 	ottowinter/AsyncTCP-esphome@^1.1.1
 	bblanchon/ArduinoJson@^6.16.1
-	erropix/ESP32 AnalogWrite@^0.2
 	pfeerick/elapsedMillis@^1.0.6
-
-[env:teensy40]
-platform = teensy
-board = teensy40
-framework = arduino
-monitor_speed = 115200
-build_flags = -D TARGET_TEENSY40
 
 [platformio]
 description = Reads data from BMS through RS-232 and controls charger profile accordingly. Should also send info over wifi.
