--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,12 @@ upload_speed = 2000000
 upload_flags = 
 	;--auth=MaPe1!
 lib_deps = 
-	ArduinoOTA
-	WiFi
-	ESPmDNS
+	ArduinoOTA @ ^1.0
+	ESPmDNS @ ^1.0
 	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
 	ottowinter/AsyncTCP-esphome@^1.1.1
 	bblanchon/ArduinoJson@^6.16.1
 	pfeerick/elapsedMillis@^1.0.6
 
 [platformio]
-description = Reads data from BMS through RS-232 and controls charger profile accordingly. Should also send info over wifi.
+description = Reads data from BMS through RS-232 and controls charger profile accordingly. Data can be viewed on webserver via Wifi Acces Point or Station.
