--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ board_build.f_flash = 80000000L
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 upload_speed = 2000000
+board_build.partitions = partitions_custom.csv
 ;upload_protocol = espota
 ;upload_port = fiorino.local
 upload_flags = 
