--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 framework = arduino
 board = wemos_d1_mini32
+;board = ttgo-t7-v14-mini32
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
@@ -19,10 +20,6 @@ build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 upload_speed = 2000000
 board_build.partitions = partitions_custom.csv
-;upload_protocol = espota
-;upload_port = fiorino.local
-upload_flags = 
-	;--auth=MaPe1!
 lib_deps = 
 	ArduinoOTA @ ^1.0
 	ESPmDNS @ ^1.0
@@ -30,6 +27,7 @@ lib_deps =
 	ottowinter/AsyncTCP-esphome@^1.1.1
 	bblanchon/ArduinoJson@^6.16.1
 	pfeerick/elapsedMillis@^1.0.6
+	sandeepmistry/CAN@^0.3.1
 
 [platformio]
 description = Reads data from BMS through RS-232 and controls charger profile accordingly. Data can be viewed on webserver via Wifi Acces Point or Station.
