--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,10 @@ board_build.f_flash = 80000000L
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 upload_speed = 2000000
+;upload_protocol = espota
+;upload_port = fiorino.local
+upload_flags = 
+	;--auth=3VLS042020
 board_build.partitions = partitions_custom.csv
 lib_deps = 
 	ArduinoOTA @ ^1.0
