--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,36 @@
 platform = espressif32
 framework = arduino
 board = wemos_d1_mini32
-;board = ttgo-t7-v14-mini32
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 build_flags = -D TARGET_ESP32
 monitor_speed = 115200
 upload_speed = 2000000
+;upload_protocol = espota
+;upload_port = fiorino.local
+upload_flags = 
+	;--auth=3VLS042020
+board_build.partitions = partitions_custom.csv
+lib_deps = 
+	ArduinoOTA @ ^1.0
+	ESPmDNS @ ^1.0
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	ottowinter/AsyncTCP-esphome@^1.1.1
+	bblanchon/ArduinoJson@^6.16.1
+	pfeerick/elapsedMillis@^1.0.6
+	sandeepmistry/CAN@^0.3.1
+
+[env:ttgo_t7_mini32]
+platform = espressif32
+framework = arduino
+board = ttgo-t7-v14-mini32
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+build_flags = -D TARGET_ESP32
+monitor_speed = 115200
+;upload_speed = 2000000
 ;upload_protocol = espota
 ;upload_port = fiorino.local
 upload_flags = 
