- Add temperature library

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.16.1
 	pfeerick/elapsedMillis@^1.0.6
 	sandeepmistry/CAN@^0.3.1
+	milesburton/DallasTemperature@^3.9.1
 
 [env:wemos_d1_mini32_wifi]
 platform = espressif32
@@ -50,6 +51,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.16.1
 	pfeerick/elapsedMillis@^1.0.6
 	sandeepmistry/CAN@^0.3.1
+	milesburton/DallasTemperature@^3.9.1
 
 [env:ttgo_t7_mini32]
 platform = espressif32
@@ -70,6 +72,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.16.1
 	pfeerick/elapsedMillis@^1.0.6
 	sandeepmistry/CAN@^0.3.1
+	milesburton/DallasTemperature@^3.9.1
 
 [platformio]
 description = Reads data from BMS through RS-232 and controls charger profile accordingly. Data can be viewed on webserver via Wifi Acces Point or Station.
